@@ -7,6 +7,8 @@
 
 - add ``max_retries`` keyword option to ``new_requests_session``.
 
+- fix ``get_latest_version`` when there are no versions.
+
 
 3.0.1 (2016-07-07)
 ------------------
